--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -5,4 +5,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print greeting
-        run: echo "Hello"
+        run: echo ${{ github.repository }}
