--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -5,4 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print greeting
-        run: echo ${{ github.repository }}
+        run: |
+        echo ${{ github }}
+        echo ${{ github.repository }}
