--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -6,5 +6,5 @@ jobs:
     steps:
       - name: Print greeting
         run: |
-          echo ${{ github }}
+          echo ${{ github.TEST }}
           echo ${{ github.repository }}
