--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -6,5 +6,6 @@ jobs:
     steps:
       - name: Print greeting
         run: |
-          echo ${{ github.TEST }}
+          echo ${{ github.repository.TEST }}
+          echo ${{ github.env.TESTT }}
           echo ${{ github.repository }}
