--- a/.github/workflows/output.yml
+++ b/.github/workflows/output.yml
@@ -5,4 +5,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Output Github context
-        run: echo ${{ toJSON(github) }}
+        run: echo "${{ toJSON(github) }}"
