--- a/.github/workflows/complex-push-event.yml
+++ b/.github/workflows/complex-push-event.yml
@@ -8,7 +8,7 @@ on:
       - main
       - "dev-*" # dev-new dev-this-is-new
       - "feat/**" # feat/new feat/new/button (allow '/')
-    paths-ignore:
+    paths:
       - ".github/workflows/*"
 jobs:
   deploy:
