--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -42,6 +42,8 @@ jobs:
         run: npm ci
       - name: Build project
         run: npm run build
+      - name: Publish JS filename
+        run: find dist/assets/*.js -type f -execdir echo '{}' ';'
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
@@ -59,6 +61,9 @@ jobs:
         with:
           name: dist-files
       - name: Output contents
-        run: ls
+        run: |
+          ls
+          cd dist
+          ls
       - name: Deploy
         run: echo "Deploying...."
