--- a/.github/workflows/complex-push-event.yml
+++ b/.github/workflows/complex-push-event.yml
@@ -3,13 +3,13 @@ on:
   pull_request:
     types: [opened]
   workflow_dispatch:
-  push:
-    branches:
-      - main
-      - "dev-*" # dev-new dev-this-is-new
-      - "feat/**" # feat/new feat/new/button (allow '/')
-    paths:
-      - ".github/workflows/*"
+  # push:
+  #   branches:
+  #     - main
+  #     - "dev-*" # dev-new dev-this-is-new
+  #     - "feat/**" # feat/new feat/new/button (allow '/')
+  #   paths:
+  #     - ".github/workflows/*"
 jobs:
   deploy:
     runs-on: ubuntu-latest
