--- a/.github/workflows/deploy-with-env.yml
+++ b/.github/workflows/deploy-with-env.yml
@@ -1,12 +1,18 @@
-name: Deploy Project
-# on: [push, workflow_dispatch]
-on: workflow_dispatch
+name: Artifacts
+on: push
+env:
+  VITE_DB: DB_USER_NAME
 jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
       - name: Get code
         uses: actions/checkout@v3
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install Nodejs
         uses: actions/setup-node@v3
         with:
@@ -21,6 +27,11 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install Nodejs
         uses: actions/setup-node@v3
         with:
@@ -29,20 +40,5 @@ jobs:
         run: npm ci
       - name: Run test
         run: npm test
-
-  deploy:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Get code
-        uses: actions/checkout@v3
-      - name: Install Nodejs
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - name: Install dependencies
-        run: npm ci
-      - name: Build project
-        run: npm run build
-      - name: Deploy
-        run: echo "Deploying...."
+      - name: Echo env
+        run: echo "${{ VITE_DB }}"
