--- a/.github/workflows/deploy-with-env.yml
+++ b/.github/workflows/deploy-with-env.yml
@@ -1,4 +1,4 @@
-name: Artifacts
+name: ENV TESTING
 on: push
 env:
   VITE_DB: DB_USER_NAME
@@ -41,4 +41,4 @@ jobs:
       - name: Run test
         run: npm test
       - name: Echo env
-        run: echo "${{ VITE_DB }}"
+        run: echo "${{ env.VITE_DB }}"
