switched to secrets

--- a/.github/workflows/deploy-with-env.yml
+++ b/.github/workflows/deploy-with-env.yml
@@ -41,4 +41,6 @@ jobs:
       - name: Run test
         run: npm test
       - name: Echo env
-        run: echo "${{ env.VITE_DB }}"
+        run: |
+        echo "${{ env.VITE_DB }}"
+        echo "${{ secrets.MONGODB_PASSWORD }}"
