--- a/.github/workflows/continue-on-error.yml
+++ b/.github/workflows/continue-on-error.yml
@@ -1,4 +1,4 @@
-name: Execution flow
+name: Continue
 on:
   push:
     branches:
@@ -35,7 +35,7 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
       - name: Test code
-        continue-on-error: ${{}}
+        continue-on-error: true
         id: run-tests
         run: npm run test
       - name: Upload test report
